[gd_scene load_steps=20 format=3 uid="uid://beoidkvyj72ff"]

[ext_resource type="Texture2D" uid="uid://tsr81fuppmev" path="res://assets/bg.png" id="1_ppgk2"]
[ext_resource type="Script" uid="uid://nved5dnjshjq" path="res://scenes/dialogue_manager.gd" id="2_2r41h"]
[ext_resource type="PackedScene" uid="uid://rhckq1jb0n7y" path="res://scenes/characters/player.tscn" id="3_klq6b"]
[ext_resource type="PackedScene" uid="uid://h5samxaffugb" path="res://scenes/characters/shop_keeper.tscn" id="4_b121j"]
[ext_resource type="PackedScene" uid="uid://cfkjt0m48xmkv" path="res://scenes/items/Item.tscn" id="5_8c41q"]
[ext_resource type="Script" uid="uid://cxtaicd7jra3d" path="res://scenes/shop_keeper_target.gd" id="5_olg7q"]
[ext_resource type="Texture2D" uid="uid://iyxr6avyh384" path="res://assets/items.png" id="6_2r41h"]
[ext_resource type="Script" uid="uid://be77yqt7drkv5" path="res://scenes/VFX/current_money.gd" id="6_klq6b"]
[ext_resource type="Script" uid="uid://c7c0aa8t8uulu" path="res://scenes/customer_manager.gd" id="8_8c41q"]
[ext_resource type="Texture2D" uid="uid://dwyg2puo2b1xn" path="res://assets/player_mouth3.png" id="10_olg7q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o5qli"]
size = Vector2(59, 1090)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0wfyh"]
size = Vector2(59, 1845.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tbgi4"]
size = Vector2(151.746, 1156.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sugp2"]
size = Vector2(59, 870.132)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tefeu"]
size = Vector2(59, 276.066)

[sub_resource type="Animation" id="Animation_klq6b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_2r41h"]
resource_name = "new_animation"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.366667, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b121j"]
_data = {
&"RESET": SubResource("Animation_klq6b"),
&"new_animation": SubResource("Animation_2r41h")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2r41h"]
size = Vector2(407, 299)

[node name="Level" type="Node2D"]
y_sort_enabled = true

[node name="Bg" type="Node2D" parent="."]
z_index = -1

[node name="ColorRect" type="ColorRect" parent="Bg"]
offset_left = -8.0
offset_top = -1.0
offset_right = 1928.0
offset_bottom = 1091.0
color = Color(0.419813, 0.419813, 0.419813, 1)
metadata/_edit_lock_ = true

[node name="ColorRect2" type="ColorRect" parent="Bg"]
offset_left = -8.0
offset_top = -1.0
offset_right = 51.0
offset_bottom = 1064.0
color = Color(0, 0, 0, 1)

[node name="ColorRect3" type="ColorRect" parent="Bg"]
offset_left = 1863.0
offset_top = -1.0
offset_right = 1922.0
offset_bottom = 1104.0
color = Color(0, 0, 0, 1)

[node name="ColorRect5" type="ColorRect" parent="Bg"]
offset_left = 855.0
offset_top = 1026.0
offset_right = 914.0
offset_bottom = 1895.0
rotation = 1.5708
color = Color(0, 0, 0, 1)

[node name="ColorRect7" type="ColorRect" parent="Bg"]
offset_left = 1924.0
offset_top = 1026.0
offset_right = 1983.0
offset_bottom = 1895.0
rotation = 1.5708
color = Color(0, 0, 0, 1)

[node name="ColorRect8" type="ColorRect" parent="Bg"]
offset_left = 1924.0
offset_top = 1026.0
offset_right = 1983.0
offset_bottom = 1895.0
rotation = 1.5708
color = Color(0, 0, 0, 1)

[node name="ColorRect6" type="ColorRect" parent="Bg"]
offset_left = 1901.0
offset_top = -3.0
offset_right = 1960.0
offset_bottom = 1885.0
rotation = 1.57081
color = Color(0, 0, 0, 1)

[node name="Bg2" type="Sprite2D" parent="Bg"]
modulate = Color(0.654232, 0.654232, 0.654232, 1)
position = Vector2(942, 550)
texture = ExtResource("1_ppgk2")

[node name="Bg3" type="Sprite2D" parent="Bg"]
modulate = Color(0.654232, 0.654232, 0.654232, 1)
position = Vector2(931, 473)
scale = Vector2(1.56844, 1)
texture = ExtResource("1_ppgk2")
region_enabled = true
region_rect = Rect2(392.923, 359.923, 716.487, 204.615)

[node name="StaticBody2D" type="StaticBody2D" parent="Bg"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bg/StaticBody2D"]
position = Vector2(312, 535)
shape = SubResource("RectangleShape2D_o5qli")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Bg/StaticBody2D"]
position = Vector2(1520, 542)
shape = SubResource("RectangleShape2D_o5qli")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Bg/StaticBody2D"]
position = Vector2(950.25, 195)
rotation = -1.57079
shape = SubResource("RectangleShape2D_0wfyh")

[node name="CollisionShape2D9" type="CollisionShape2D" parent="Bg/StaticBody2D"]
position = Vector2(919.625, 467.124)
rotation = -1.57079
shape = SubResource("RectangleShape2D_tbgi4")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Bg/StaticBody2D"]
position = Vector2(379, 884)
rotation = -1.57079
shape = SubResource("RectangleShape2D_sugp2")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Bg/StaticBody2D"]
position = Vector2(903, 1009)
rotation = -1.57079
shape = SubResource("RectangleShape2D_tefeu")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Bg/StaticBody2D"]
position = Vector2(785, 992)
shape = SubResource("RectangleShape2D_tefeu")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="Bg/StaticBody2D"]
position = Vector2(1012, 992)
shape = SubResource("RectangleShape2D_tefeu")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Bg/StaticBody2D"]
position = Vector2(1419, 884)
rotation = -1.57079
shape = SubResource("RectangleShape2D_sugp2")

[node name="DialogueManager" type="Node2D" parent="."]
y_sort_enabled = true
script = ExtResource("2_2r41h")

[node name="Player" parent="DialogueManager" instance=ExtResource("3_klq6b")]
position = Vector2(842, 788)
can_be_controlled = false

[node name="ShopKeeper" parent="DialogueManager" instance=ExtResource("4_b121j")]
position = Vector2(639, 389)

[node name="Label" type="Label" parent="DialogueManager"]
visible = false
offset_left = 23.0
offset_top = 29.0
offset_right = 74.0
offset_bottom = 52.0
theme_override_font_sizes/font_size = 50
text = "HELLO"

[node name="ShopKeeperTarget" type="Marker2D" parent="."]
position = Vector2(640, 390)
script = ExtResource("5_olg7q")

[node name="Broom" parent="." instance=ExtResource("5_8c41q")]
position = Vector2(1192, 440)

[node name="CurrentMoney" type="Node2D" parent="."]
z_index = 1
script = ExtResource("6_klq6b")

[node name="Label" type="Label" parent="CurrentMoney"]
offset_left = 1809.0
offset_top = 959.5
offset_right = 1849.0
offset_bottom = 1028.5
pivot_offset = Vector2(13, 35)
theme_override_font_sizes/font_size = 50
text = "0"

[node name="Items" type="Sprite2D" parent="CurrentMoney/Label"]
position = Vector2(-27, 40)
texture = ExtResource("6_2r41h")
region_enabled = true
region_rect = Rect2(12.5, 97.5, 68, 95)

[node name="PlayerMouth3" type="Sprite2D" parent="CurrentMoney/Label/Items"]
modulate = Color(0.678431, 0.858824, 0.184314, 1)
z_index = -1
position = Vector2(2.00005, -1.50002)
scale = Vector2(3.21875, 3.26724)
texture = ExtResource("10_olg7q")

[node name="FlashNoMoney" type="AnimationPlayer" parent="CurrentMoney"]
libraries = {
&"": SubResource("AnimationLibrary_b121j")
}

[node name="Area2D" type="Area2D" parent="CurrentMoney"]
position = Vector2(1232, 521)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CurrentMoney/Area2D"]
position = Vector2(-47, -18)
shape = SubResource("RectangleShape2D_2r41h")

[node name="Customers" type="Node2D" parent="."]
y_sort_enabled = true
script = ExtResource("8_8c41q")

[node name="Entry" type="Marker2D" parent="Customers"]
position = Vector2(904, 956)

[node name="EntryEntrance" type="Marker2D" parent="Customers"]
position = Vector2(906, 799)

[node name="CustomerPositions" type="Node2D" parent="Customers"]

[node name="Pos2" type="Marker2D" parent="Customers/CustomerPositions"]
position = Vector2(412, 592)

[node name="Pos6" type="Marker2D" parent="Customers/CustomerPositions"]
position = Vector2(903, 592)

[node name="Pos7" type="Marker2D" parent="Customers/CustomerPositions"]
position = Vector2(1248, 592)

[node name="Pos3" type="Marker2D" parent="Customers/CustomerPositions"]
position = Vector2(413, 800)

[node name="Pos4" type="Marker2D" parent="Customers/CustomerPositions"]
position = Vector2(1394, 800)

[node name="CustomersList" type="Node2D" parent="Customers"]
y_sort_enabled = true

[node name="Items" type="Sprite2D" parent="."]
position = Vector2(782, 415)
texture = ExtResource("6_2r41h")
region_enabled = true
region_rect = Rect2(82.4998, 0, 594.359, 222)

[connection signal="body_entered" from="CurrentMoney/Area2D" to="CurrentMoney" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="CurrentMoney/Area2D" to="CurrentMoney" method="_on_area_2d_body_exited"]
